--- a/src/components/OutputField.css
+++ b/src/components/OutputField.css
@@ -1,5 +1,13 @@
-.inputField {
-    background-color: black;
-    color: white;
-    
+.outputContainer {
+    margin-top: 1rem;
+    padding: 0 2rem;
+    display: flex;
+}
+
+.outputContainer > input {
+    margin-right: 1rem;
+}
+
+.outputContainer > label {
+    margin-right: auto;
 }
