--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,56 @@
+@font-face {
+    font-family: 'Nanum Gothic Coding';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/nanum-gothic-coding-v14-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('NanumGothicCoding'),
+        url('./fonts/nanum-gothic-coding-v14-latin-regular.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */ url('./fonts/nanum-gothic-coding-v14-latin-regular.woff2') format('woff2'),
+        /* Super Modern Browsers */ url('./fonts/nanum-gothic-coding-v14-latin-regular.woff')
+            format('woff'),
+        /* Modern Browsers */ url('./fonts/nanum-gothic-coding-v14-latin-regular.ttf')
+            format('truetype'),
+        /* Safari, Android, iOS */
+            url('./fonts/nanum-gothic-coding-v14-latin-regular.svg#NanumGothicCoding') format('svg'); /* Legacy iOS */
+}
+
 *,
 *:after,
 *:before {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+    font: 16px 'Nanum Gothic Coding', Arial, sans-serif;
+    text-transform: uppercase;
+    margin: 2rem;
+    background-color: rgb(202, 202, 202);
+    color: rgb(241, 239, 239);
 }
 
-ol,
-ul {
-  padding-left: 30px;
+::placeholder {
+    background-color: rgb(41, 41, 41);
+    color: rgb(241, 239, 239);
+    font: 16px 'Nanum Gothic Coding', Arial, sans-serif;
+    text-transform: uppercase;
+}
+
+input[type='text'],
+input[type='checkbox'],
+input:checked,
+input:active,
+input:hover,
+textarea,
+button {
+    background: none;
+    border: none;
+    color: rgb(241, 239, 239);
+    font: 16px 'Nanum Gothic Coding', Arial, sans-serif;
+    text-transform: uppercase;
+    outline: none;
+}
+
+button,
+input[type='checkbox'] {
+    cursor: pointer;
 }
