--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,6 @@
+.container{
+    position: relative;
+}
 .main {
     width: 600px;
     height: 500px;
@@ -7,7 +10,6 @@
     border-top: 0px;
     box-shadow: 31px 40px 88px -24px rgba(0,0,0,0.66),10px 10px 32px 0px rgba(0,0,0,0.35);
     padding-bottom: 2rem;
-    position: relative;
     overflow: hidden;
 }
 
