--- a/src/components/InputField.css
+++ b/src/components/InputField.css
@@ -8,7 +8,6 @@
 .inputContainer > span {
     margin-right: 1rem;
 }
-
-.inputField{
-    margin-right: auto;
+.inputContainer > input {
+    width: 80%;
 }
